[gd_scene load_steps=9 format=2]

[ext_resource path="res://Items/Passives/Drone/Drone.gd" type="Script" id=1]
[ext_resource path="res://Items/Passives/Drone/Drone.png" type="Texture" id=2]
[ext_resource path="res://Items/Passives/Drone/DroneBarrel.png" type="Texture" id=3]
[ext_resource path="res://Items/Passives/Drone/DroneLight.png" type="Texture" id=4]
[ext_resource path="res://Managing/SoundManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Items/Weapons/Sounds/DefaultShoot.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="CircleShape2D" id=1]
radius = 192.0

[node name="Drone" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Barrel" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 6, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 4 )
color = Color( 0.992157, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="EnemyFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyFinder"]
visible = false
shape = SubResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="ShootTimer" type="Timer" parent="Timers"]
wait_time = 0.1
autostart = true

[node name="TargetChangeTimer" type="Timer" parent="Timers"]
autostart = true

[node name="ShootSound" parent="." instance=ExtResource( 5 )]
audio = ExtResource( 6 )
volumeMod = -5.0
pitchShiftRange = 1.5
bus = "Reverb"

[connection signal="area_entered" from="EnemyFinder" to="." method="_on_found_enemy"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="start_attack"]
[connection signal="timeout" from="Timers/ShootTimer" to="." method="shoot"]
[connection signal="timeout" from="Timers/TargetChangeTimer" to="." method="get_target_pos"]
